--- a/_includes/header.html
+++ b/_includes/header.html
@@ -54,9 +54,9 @@
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
           <li><a href="{{ '' | relative_url }}/">/home</a></li>
-          <li><a href="{{ 'archive.html' | relative_url }}">/archive</a></li>
-          <li><a href="{{ 'tags.html' | relative_url }}">/tags</a></li>
-          <li><a href="{{ 'about.html' | relative_url }}">/about</a></li>
+          <li><a href="{{ 'archive' | relative_url }}">/archive</a></li>
+          <li><a href="{{ 'tags' | relative_url }}">/tags</a></li>
+          <li><a href="{{ 'about' | relative_url }}">/about</a></li>
         </ul>
       </div>
     </div>
