--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -414,3 +414,12 @@ table.inner-borders {
   }
 }
 
+i.copy {
+  display: inline-block;
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: FlipH;
+  -ms-filter: "FlipH";
+}
